Simplify shouldReturnEmptyIfZeroParts (#908)